<resources>
    <string name="app_name">NereChat</string>
    <string name="login">Iniciar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="Ok">Ok</string>
    <string name="Cancelar">Cancelar</string>
    <string name="ajustes_configurar_notificaciones">Configurar notificaciones</string>
    <string name="ajustes_notificacionesDesactivadas">Notificaciones desactivadas</string>
    <string name="ajustes_notificacionesActivadas">Notificaciones activadas</string>
    <string name="ajustes_notificaciones">Notificaciones</string>
    <string name="ajustes_toastDesactivadas">Toast desactivadas</string>
    <string name="ajustes_toastActivadas">Toast activadas</string>
    <string name="ajustes_toast">Toast</string>
    <string name="ajustes_otros">Otros ajustes</string>
    <string name="ajustes_tema">Tema</string>
    <string name="ajustes_idioma">Idioma</string>
    <string name="ES">Español</string>
    <string name="EN">Inglés</string>
    <string name="EU">Vasco</string>
    <string name="ajustes_morado">Morado</string>
    <string name="ajustes_verde">Verde</string>
    <string name="ajustes_naranja">Naranja</string>
    <string name="ajustes_azul">Azul</string>
    <string name="googleApis" translatable="false">https://www.googleapis.com/auth/cloud-platform</string>
    <string name="iniciarsesion_IniciarSesion">Iniciar sesión</string>
    <string name="iniciarsesion_email">Correo electrónico</string>
    <string name="iniciarsesion_contraseña">Contraseña</string>
    <string name="iniciarsesion_crearunacuenta">Crear una cuenta</string>
    <string name="registrate_registrate">Registrate</string>
    <string name="registrate_repitelacontraseña">Repite la contraseña</string>
    <string name="crearperfil_datosdeperfil">Datos de perfil</string>
    <string name="crearperfil_nombredeusuario">Nombre de usuario</string>
    <string name="crearperfil_guardar">Guardar</string>
    <string name="perfil_Estado">Estado:</string>
    <string name="perfil_nombreUsuario">Nombre de usuario:</string>
    <string name="perfil_cerrarsesion">Cerrar sesión</string>
    <string name="perfil_fechaunion">Fecha de unión:</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_fotos">Fotos</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_todoslosusuarios">Todos los usuarios</string>
    <string name="ajustes_ocultarultimahora">Ocultar última hora</string>
    <string name="ajustes_ultimahoraSi">Se visualiza la ultima conexion de los usuarios y todos ellos podrán ver tu última conexión</string>
    <string name="ajustes_ultimahoraNo">Has ocultado tu ultima conexion. Nadie podrá ver tu ultima conexion, ni tu podrás ver la última conexion de nadie</string>
    <string name="maps_calculardistancia">Calcular distancia</string>
    <string name="maps_quierescalcularelcaminohastaestepunto">Quieres calcular la distancia hasta ese punto?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="maps_puntoInicial">Punto inicial</string>
    <string name="maps_tocaparacalculareltrayecto">Toca para calcular el trayecto</string>
    <string name="maps_trayecto">"Trayecto: "</string>
    <string name="maps_duracion">"Duracion: "</string>
    <string name="maps_kilometros">"Kilometros: "</string>
    <string name="chat_ingresauntexto">Ingresa un texto...</string>
    <string name="maps_vista">Vista</string>
    <string name="mensaje_cargandoImagen">Cargando imagen...</string>
    <string name="nav_mapa">Mapa</string>
    <string name="popup_map_Relieve">Relieve</string>
    <string name="popup_map_Hibrido">Hibrido</string>
    <string name="popup_map_Satelite">Satelite</string>
    <string name="popup_map_Normal">Normal</string>
    <string name="popup_mensaje_Eliminar">Eliminar</string>
    <string name="popup_mensaje_Reaccionar">Reaccionar</string>
    <string name="popup_mensaje_Editar">Editar</string>
    <string name="popup_reaccionar_megusta">Me gusta</string>
    <string name="popup_reaccionar_Feliz">Feliz</string>
    <string name="popup_reaccionar_Enfadado">Enfadado</string>
    <string name="toast_Haseliminadoelmensajesoloparati">Has eliminado el mensaje sólo para ti</string>
    <string name="toast_haseliminadoelmensajeparatodos">Has eliminado el mensaje para todos</string>
    <string name="toast_yanotegusta">Ya no te gusta el mensaje</string>
    <string name="toast_Tehagustadoelmensaje">Te ha gustado el mensaje</string>
    <string name="toast_Hasquitadolareaccionfeliz">Has quitado la reacción feliz</string>
    <string name="toast_Reacciónfelizalmensaje">Reacción feliz al mensaje</string>
    <string name="toast_Hasquitadolareacciónenfadado">Has quitado la reacción enfadado</string>
    <string name="toast_Reacciónenfadadoalmensaje">Reacción enfadado al mensaje</string>
    <string name="alerta_Eliminarmensaje">Eliminar mensaje</string>
    <string name="alerta_Quiereseliminarelmensaje">Quieres eliminar el mensaje</string>
    <string name="alerta_Soloparami">Solo para mi</string>
    <string name="alerta_Paratodos">Para todos</string>
    <string name="alerta_Escribeelmensajeeditado">Escribe el mensaje editado</string>
    <string name="alerta_Guardar">Guardar</string>
    <string name="alerta_Cancelar">Cancelar</string>
    <string name="toast_estadoactualizado">Estado actualizado</string>
    <string name="toast_Elestadonosehapodidoactualizar">El estado no se ha podido actualizar</string>
    <string name="toast_Nombredeusarioactualizado">Nombre de usuario actualizado</string>
    <string name="toast_Elnombredeusuarionosehapodidoactualizar">El nombre de usuario no se ha podido actualizar</string>
    <string name="toast_Fotodeperfilactualizada">Foto de perfil actualizada</string>
    <string name="toast_nosehapodidocrearelperfil">No se ha podido crear el perfil</string>
    <string name="toast_nosehapodidocrearlacuenta">No se ha podido crear la cuenta</string>
    <string name="toast_Tienesqueseleccionarunafotodeperfil">Tienes que seleccionar una foto de perfil</string>
    <string name="toast_Elnombredeusuarionoesvalido">El nombre de usuario no es válido</string>
    <string name="toast_Nosehapodidoiniciarsesion">No se ha podido iniciar sesion. Revisa los datos</string>
    <string name="progressDialog_enviandoImagen">Enviando imagen...</string>
    <string name="progressDialog_porfavorespere">Por favor, espere</string>
    <string name="progressDialog_Iniciandosesion">Iniciando sesión...</string>
    <string name="error_Elemailnoescorrecto">El email no es correcto</string>
    <string name="error_Lacontraseñatienequetenerunminimode6caracteres">La contraseña tiene que tener un minimo de 6 caracteres</string>
    <string name="error_Lascontraseñasnocoinciden">Las contraseñas no coinciden</string>
    <string name="progressDialog_Registrando">Registrando...</string>
    <string name="progressDialog_Porfavoresperamientrasseregistra">Por favor espera mientras se registra</string>
    <string name="progressDialog_Creandoperfil">Creando perfil</string>
    <string name="progressDialog_Porfavoresperehastaqueseacabedecrearelperfil">Por favor espere hasta que se acabe de crear el perfil</string>
    <string name="toast_algosaliomal">Algo salió mal</string>
    <string name="toast_Nosehapodidoconectarconelchatbot">No se ha podido conectar con el chatbot</string>
    <string name="alert_Insertaelnuevoestado">Inserta el nuevo estado</string>
    <string name="alert_Insertaelnuevonombredeusuario">Inserta el nuevo nombre de usuario</string>
    <string name="progressDialog_SubiendoImagen">Subiendo Imagen</string>
    <string name="nav_comentarios">Comentarios</string>
    <string name="toast_comentado">Has comentado</string>
    <string name="alerta_Eliminarcomentario">Eliminar comentario</string>
    <string name="alerta_Quiereseliminarelcomentario">¿Quieres eliminar el comentario?</string>
    <string name="toast_haseliminadoelcomentario">Has eliminado el comentario</string>
    <string name="alerta_Eliminarpost">Eliminar imagen</string>
    <string name="alerta_Quiereseliminarelpost">¿Quieres eliminar la imagen?</string>
    <string name="toast_haseliminadolaimagen">Has eliminado la imagen</string>
    <string name="nav_subirfoto">Subir foto</string>
    <string name="subirfoto_Descripción">Descripción</string>
    <string name="subirfoto_seleccionaunafoto">Selecciona una foto</string>
</resources>