<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondoazul"
    tools:context=".CrearCuentaActivity">

    <TextView
        android:id="@+id/textViewRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate_registrate"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLCrearEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="377dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrar"
        app:layout_constraintVertical_bias="0.04">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCrearEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_text_input"
            android:hint="@string/iniciarsesion_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLCrearPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="374dp"
        android:layout_height="97dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrar"
        app:layout_constraintVertical_bias="0.269">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCrearPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_text_input"
            android:hint="@string/iniciarsesion_contraseña"
            android:inputType="textPassword"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLCrearRepPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="374dp"
        android:layout_height="101dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrar"
        app:layout_constraintVertical_bias="0.497">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCrearRepPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_text_input"
            android:hint="@string/registrate_repitelacontraseña"
            android:inputType="textPassword"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_crearCuenta"
        android:layout_width="363dp"
        android:layout_height="57dp"
        android:onClick="registrar"
        android:text="@string/registrate_registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLCrearPass"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/text_iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciarsesion_IniciarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crearCuenta"
        app:layout_constraintVertical_bias="0.215" />

</androidx.constraintlayout.widget.ConstraintLayout>