<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment">

    <include
        android:id="@+id/chat_toolbarPerfil"
        layout="@layout/toolbar_principal"
        android:background="#F7C6FF"></include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewPerfilE"
        android:layout_width="188dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbarPerfil">


    </de.hdodenhof.circleimageview.CircleImageView>

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_cerrarsesion"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewPerfilE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/circleImageViewPerfilE"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewPerfilE"
        app:layout_constraintVertical_bias="0.077" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonEditFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_camara"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewPerfilE"
        app:layout_constraintEnd_toEndOf="@+id/circleImageViewPerfilE"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/circleImageViewPerfilE"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewPerfilE"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textPerfil_tituloNombreUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_nombreUsuario"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewPerfilE"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textPerfil_Estado"
        android:layout_width="202dp"
        android:layout_height="55dp"
        android:text="holiholi"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textPerfil_tituloEstado"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil_tituloEstado"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/textPerfil_tituloEstado"
        android:layout_width="66dp"
        android:layout_height="25dp"
        android:text="@string/perfil_Estado"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textPerfil_NombreUs"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil_NombreUs"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/imageViewUsuarioEdit"
        android:layout_width="26dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/textPerfil_tituloNombreUs"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewPerfilE"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/ic_editar"></ImageView>

    <ImageView
        android:id="@+id/imageViewUsuario"
        android:layout_width="26dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textPerfil_tituloNombreUs"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewPerfilE"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/ic_perfil"></ImageView>

    <ImageView
        android:id="@+id/imageViewEstadoEdit"
        android:layout_width="26dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/textPerfil_NombreUs"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil_NombreUs"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/ic_editar"></ImageView>

    <TextView
        android:id="@+id/textPerfil_NombreUs"
        android:layout_width="163dp"
        android:layout_height="23dp"
        android:text="Nereamonas"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textPerfil_tituloNombreUs"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil_tituloNombreUs"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/imageViewEstado"
        android:layout_width="26dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textPerfil_tituloEstado"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil_NombreUs"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/ic_perfil"></ImageView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMisFotos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textPerfilOtroUs_Estado"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="@+id/circleImageViewPerfilOtroUsE"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil_Estado" />



</androidx.constraintlayout.widget.ConstraintLayout>